# libvrf

./: CMakeLists.txt
include/libvrf/: def.hpp  entt_view.hpp  vector.hpp
src/: entt_view.cpp  vector.cpp
